errors.txt
/Users/ihsan/Desktop/work/src/hazelcast-cpp-client/hazelcast/src/hazelcast/client/network.cpp:1249:31: error: 'wrap' is deprecated: Use boost::asio::bind_executor() [-Werror,-Wdeprecated-declarations]
 1249 |       socket_->get_executor().wrap([=](boost::system::error_code ec) {
      |                               ^
/Users/ihsan/Desktop/work/src/hazelcast-cpp-client/cmake-build-arm-debug-vcpkg/vcpkg_installed/arm64-osx/include/boost/asio/io_context_strand.hpp:246:3: note: 'wrap' has been explicitly marked deprecated here
  246 |   wrap(Handler handler)
      |   ^
/Users/ihsan/Desktop/work/src/hazelcast-cpp-client/hazelcast/src/hazelcast/client/network.cpp:1249:31: error: 'wrap<(lambda at /Users/ihsan/Desktop/work/src/hazelcast-cpp-client/hazelcast/src/hazelcast/client/network.cpp:1249:36)>' is deprecated: Use boost::asio::bind_executor() [-Werror,-Wdeprecated-declarations]
 1249 |       socket_->get_executor().wrap([=](boost::system::error_code ec) {
      |                               ^
/Users/ihsan/Desktop/work/src/hazelcast-cpp-client/cmake-build-arm-debug-vcpkg/vcpkg_installed/arm64-osx/include/boost/asio/io_context_strand.hpp:240:3: note: 'wrap<(lambda at /Users/ihsan/Desktop/work/src/hazelcast-cpp-client/hazelcast/src/hazelcast/client/network.cpp:1249:36)>' has been explicitly marked deprecated here
  240 |   BOOST_ASIO_DEPRECATED_MSG("Use boost::asio::bind_executor()")
      |   ^
/Users/ihsan/Desktop/work/src/hazelcast-cpp-client/cmake-build-arm-debug-vcpkg/vcpkg_installed/arm64-osx/include/boost/asio/detail/config.hpp:1383:47: note: expanded from macro 'BOOST_ASIO_DEPRECATED_MSG'
 1383 | #     define BOOST_ASIO_DEPRECATED_MSG(msg) [[deprecated(msg)]]
      |                                               ^
In file included from /Users/ihsan/Desktop/work/src/hazelcast-cpp-client/hazelcast/src/hazelcast/client/network.cpp:44:
In file included from /Users/ihsan/Desktop/work/src/hazelcast-cpp-client/hazelcast/include/hazelcast/client/internal/socket/TcpSocket.h:20:
/Users/ihsan/Desktop/work/src/hazelcast-cpp-client/hazelcast/include/hazelcast/client/internal/socket/BaseSocket.h:230:26: error: 'wrap' is deprecated: Use boost::asio::bind_executor() [-Werror,-Wdeprecated-declarations]
  230 |           socket_strand_.wrap(
      |                          ^
/Users/ihsan/Desktop/work/src/hazelcast-cpp-client/hazelcast/include/hazelcast/client/internal/socket/BaseSocket.h:113:9: note: in instantiation of member function 'hazelcast::client::internal::socket::BaseSocket<boost::asio::ssl::stream<boost::asio::basic_stream_socket<boost::asio::ip::tcp>>>::do_read' requested here
  113 |         do_read(std::move(connection));
      |         ^
/Users/ihsan/Desktop/work/src/hazelcast-cpp-client/hazelcast/src/hazelcast/client/network.cpp:1839:12: note: in instantiation of member function 'hazelcast::client::internal::socket::BaseSocket<boost::asio::ssl::stream<boost::asio::basic_stream_socket<boost::asio::ip::tcp>>>::connect' requested here
 1839 | SSLSocket::SSLSocket(boost::asio::io_context& io_service,
      |            ^
/Users/ihsan/Desktop/work/src/hazelcast-cpp-client/cmake-build-arm-debug-vcpkg/vcpkg_installed/arm64-osx/include/boost/asio/io_context_strand.hpp:246:3: note: 'wrap' has been explicitly marked deprecated here
  246 |   wrap(Handler handler)
      |   ^
In file included from /Users/ihsan/Desktop/work/src/hazelcast-cpp-client/hazelcast/src/hazelcast/client/network.cpp:44:
In file included from /Users/ihsan/Desktop/work/src/hazelcast-cpp-client/hazelcast/include/hazelcast/client/internal/socket/TcpSocket.h:20:
/Users/ihsan/Desktop/work/src/hazelcast-cpp-client/hazelcast/include/hazelcast/client/internal/socket/BaseSocket.h:230:26: error: 'wrap<(lambda at /Users/ihsan/Desktop/work/src/hazelcast-cpp-client/hazelcast/include/hazelcast/client/internal/socket/BaseSocket.h:231:13)>' is deprecated: Use boost::asio::bind_executor() [-Werror,-Wdeprecated-declarations]
  230 |           socket_strand_.wrap(
      |                          ^
/Users/ihsan/Desktop/work/src/hazelcast-cpp-client/cmake-build-arm-debug-vcpkg/vcpkg_installed/arm64-osx/include/boost/asio/io_context_strand.hpp:240:3: note: 'wrap<(lambda at /Users/ihsan/Desktop/work/src/hazelcast-cpp-client/hazelcast/include/hazelcast/client/internal/socket/BaseSocket.h:231:13)>' has been explicitly marked deprecated here
  240 |   BOOST_ASIO_DEPRECATED_MSG("Use boost::asio::bind_executor()")
      |   ^
/Users/ihsan/Desktop/work/src/hazelcast-cpp-client/cmake-build-arm-debug-vcpkg/vcpkg_installed/arm64-osx/include/boost/asio/detail/config.hpp:1383:47: note: expanded from macro 'BOOST_ASIO_DEPRECATED_MSG'
 1383 | #     define BOOST_ASIO_DEPRECATED_MSG(msg) [[deprecated(msg)]]
      |                                               ^

